1.更新LGBluetooth.framework 2.Example工程更新到Xcode 8，兼容iOS 10 3.修改固件升级的逻辑 4.增加写号功能

--- a/LGBluetoothExample/LGBluetoothExample-Info.plist
+++ b/LGBluetoothExample/LGBluetoothExample-Info.plist
@@ -24,6 +24,12 @@
 	<string>8</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>蓝牙功能</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>日历功能</string>
+	<key>NSContactsUsageDescription</key>
+	<string>联系人功能</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
