--- a/LGBluetoothExample/LGBluetoothExample-Info.plist
+++ b/LGBluetoothExample/LGBluetoothExample-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>云图外发工具</string>
+	<string>云图工具</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>3.0.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -25,13 +25,14 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>蓝牙功能</string>
+	<string>蓝牙</string>
 	<key>NSCalendarsUsageDescription</key>
-	<string>日历功能</string>
+	<string>日历</string>
 	<key>NSContactsUsageDescription</key>
-	<string>联系人功能</string>
+	<string>联系人</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>bluetooth-central</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
