--- a/LGBluetoothExample/LGBluetoothExample-Info.plist
+++ b/LGBluetoothExample/LGBluetoothExample-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>云图工具</string>
+	<string>蓝牙工具</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
